# c-python-qcl-tdi

./: CMakeLists.txt  FindSTIM.cmake  calculate-mean.cpp  capture-frames.cpp  constant-power-imaging.cpp  holo3pos.cpp  inte.cpp  laser-power-compensation.cpp  laser-power-compensation_new.cpp  laser-scanning.cpp  main-laser-power-tuning.cpp  main.cpp  qcl_api.cpp  showim.cpp  snap-gns.cpp  snap-gw.cpp  snap.cpp  tdi_combine.m  tdi_combine_pgm.m  tdi_combine_pgm_spe.m
IPS SDK/Include/: A3200AeroBasicCommands.h  A3200Callback.h  A3200Commands.h  A3200CommonStructures.h  A3200DataCollection.h  A3200ErrorCode.h  A3200Information.h  A3200Status.h  A3200StatusItemInfo.h  A3200Variable.h  Exception.h  Grab.h
IPS SDK/Lib/Win32/: A3200C.lib  ipsacq.lib  ipssaperalt.lib  sbfem.lib
IPS SDK/Lib/Win64/: ipssaperalt.lib  sbfem.lib
include/: A3200.h  A3200CommonTypes.h  A3200Configuration.h  A3200Connection.h  A3200DataCollectionInfo.h  A3200EnumNames.h  A3200Error.h  A3200MessageCallbacks.h  A3200Parameter.h  A3200ParameterId.h  A3200Plc.h  A3200Program.h  Camera.h  MIRcatSDK.h  ips.h  vmemory.h
lib32/: MIRcatSDK.lib
lib64/: A3200C64.lib  ipsacq.lib
matlab/: load_tdi_sequence.m  mosaic  mosaic.hdr  qcl2envi.m  qcl2mat.m  qcltdi.m  qcltdi_withbackground_singlespot.m
python/: holo_plot.py  hologram.py  hologram_ratiotest,.py  laserFT.py  para_plot.py
